# calc

./: .gitignore  AUTHORS  Makefile.am  README  README.md  calc.c  calc.h  configure.ac  getch.c  getop.c  main.c  stack.c
include/: calc.h
src/: Makefile.am  getch.c  getop.c  main.c  stack.c
